Changes to Portfolio

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
     background-image: linear-gradient(#F4EEFF, #DCD6F7, white, mediumpurple, #7752FE);
     background-repeat: no-repeat;
     padding: 20px;
-    font-family: Arial;
+    font-family: 'Times New Roman', Times, serif;
   }
 
 
